# fastAPI_first_since

./: .dockerignore  .env  .gitignore  README.md  database.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  repository.py  requirements.txt  router.py  schemas.py
app/: main.py  models.py
app/core/: config.py  constants.py  database.py  dependencies.py  permissions.py  security.py
app/repositories/: room_repository.py  user_repository.py
app/routers/: admin.py  auth.py  bookings.py  rooms.py  users.py
app/schemas/: booking.py  room.py  slot.py  user.py
app/scripts/: create_super_admin.py  reset_super_admin_password.py
tests/: conftest.py
tests/integrations/: test_auth.py  test_bookings.py  test_jwt.py  test_rooms.py  test_user.py
tests/units/: test_unit_constants.py  test_unit_jwt.py  test_unit_models.py
